@@ -2,7 +2,7 @@
 <?php
 /*
 	$Id$
-	extension for m0n0wall (http://m0n0.ch/wall)
+	part of m0n0wall (http://m0n0.ch/wall)
 	
 	Copyright (C) 2012 Lennart Grahl <masterkeule@gmail.com>.
 	All rights reserved.
